on the discussion

--- a/_posts/thesis_chapters/2025-6-5-Design_v14.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v14.md
@@ -278,9 +278,10 @@ COMPRESS & SIGNPOST
 
 I now discuss this design in relation to existing research on learning to programme through the use of supporting code templates.
 
-The template design is an example of a “half-baked” microworld in the form of a games [@kynigos_children_2018; @kynigos_half-baked_2007], and aligns broadly with the UMC framework [@lee_computational_2011]. The work of Kynigos et al. [-@kynigos_children_2018] on the concept of half-baked microworlds and games helped me focus on the motivational aspect of incomplete game affordances to drive initial engagement with the use and modify stages of the UMC approach. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].
+The template design is an example of a “half-baked” microworld in the form of a games [@kynigos_children_2018; @kynigos_half-baked_2007], and aligns broadly with the UMC framework [@lee_computational_2011]. The work of Kynigos et al. [-@kynigos_children_2018] on the concept of half-baked microworlds and games helped me focus on the motivational aspect of incomplete game affordances to drive initial engagement with the use and modify stages of the UMC approach. The use of a template aligned with half-baked game/microworld approach [@kynigos_children_2018] helped by introducing hands on use of coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].
 
-In particular, the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. My approach, through a careful scaffolding of initial coding experiences, forced a rapid and early transition from the _use_ to _modify_ stages, the motivation being to address possible negative affect towards text-based coding. The use of a template aligned with half-baked game/microworld approach [@kynigos_children_2018] helped by introducing hands on use of coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities.
+
+
 
 <!-- FOOTNOTE SIGNPOSTS CH.6 - ADD AS TENSION IN TABLE TOO? -->
 Turning to the aspect of authenticity in the learning design, it is valuable to re-examine the factors driving my choice of JavaScript and Phaser, a professional, open-source game-making framework. Specifically, this choice relates to the potentially empowering impact of exposing participants to authentic technologies and concepts in hands-on, exploratory processes. Ratto [-@ratto_critical_2011] discusses this through critical making, a process that playfully brings forward Latour's [-@weibel_making_2005; -@latour_cautious_2008] ideas of shifting from matters of fact to matters of concern by revealing taken-for-granted artefacts as deliberately designed objects. This was evident in conversations between participants where they expressed a sense of inspiration or engagement with previously unknown technologies. For instance, exchanges demonstrated a growing appreciation for the complexity behind professional games, based on their perception of the effort required for their own simple game projects:
@@ -291,10 +292,9 @@ Turning to the aspect of authenticity in the learning design, it is valuable to 
 
 <!-- ADDITION MADIHA's reflection in interview data. -->
 
-A possible drawback of using a professional tool for novice learners is the risk of culture shock when participants encounter the unfamiliar and potentially alienating aspects of a professional coding ecosystem. The learning design outlined in this chapter helps address at least the beginning of this process by providing a protective, scaffolded learning environment.
+
 
 While my design aim was in part to reduce coding syntax errors and thus reduce learner anxiety, I did not wish not to remove the possibility of learners making mistakes entirely. While even these small changes involved potential syntax errors, as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support [^20].
-
 
 SIGN POST
 
@@ -493,7 +493,7 @@ Their inclusion in the design was an significant response to the contradictions 
 
 In addition, it is also of value to briefly explore what is missing from the learning design as a way of beginning analysis of what barriers have thus been circumvented though omission.  For example, I developed a visual process of learners mapping their progression from one GDP to another via a large scale visual map [37b]. Similarly, after P3 I created a map of learning dimension based broadly on the work of Brennan and Resnick [^37], of concepts that suit exploration via these game making activities. However, given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.   
 
-INTEGRATE ABOVE 
+INTEGRATE ABOVE
 This study differs from much of the research in the domain of CGD&P in that cultural and social aspects of the learning design are prioritise over the personal appropriation of computing concepts and practices.
 
 MORE SIGNPOSTING?
@@ -505,15 +505,9 @@ Chapter 7 focuses on analysing participant reactions to the design from a more c
 
 <!-- MERGED FROM 2024 -11 -6 VERSION -  -->
 
-This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process. The contradictions explored initially focused on technical and then more social dimensions of the learning design, a process which has surfaced some of the barriers to achieving the varied competencies needed to complete the text coding of a multi-media project.
 
-This discussion explores features of the design narrative and the summative table section synthesises aspects of systemic contradictions and highlights how elements of the design process contribute to the research landscape, specifically:
 
-- A stage based approach, as a particular sub-set of design build test pedagogy is offered as a contribution.
-- UMC, half-baked approach and constructionist design principles, and the increased complexity created by trying to use authentic tools and created links with communities
-- A metaphor - of harbours is offered to clarify this conceptual  contribution
-
- The section ends with a table which begins a process of synthesis of design factors.
+This discussion explores features of the design narrative and elements of the design process contribute to the research landscape, specifically: a stage-based approach, as adapted instance of  design-build-test pedagogy is offered as a practical contribution; the learning design is contrasted to UMC and constructionist design principles, highlighting the increased complexity created by trying to use authentic tools and processes; subsequently a harbour metaphor is offered to clarify these conceptual contribution; finally, a summative table section synthesises aspects of systemic contradictions
 
 <!-- - alignment with UMC, and other pedagogies (retrospectively found),
   - authenticity and blackboxing in particular as a constructionist approach
@@ -522,46 +516,62 @@ This discussion explores features of the design narrative and the summative tabl
 
 #### A staged based approach structured around a germ cell concept of GDPs
 
-In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a stage-based approach which introduces code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, which are subsequently replaced by more advanced models or complex instances of the task. The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation.
+In the learning design outlined in this chapter, GDPs drive stage-based instructional processes. Using terminology from Denner et al. [-@denner_does_2019], the shift from P1 to P2 represents a move from a design-build-test to a _stage-based_ approach. By the term _stage-based_ I mean a process which introduces code structures and challenges in an initially simplistic, prototypical format for learners to experience and explore, and which are subsequently replaced by more advanced models or complex instances of the task. This term arose from an initial misunderstanding I had in my reading of the review of Denner et al. [@denner_does_2019]. I was not familiar with the US term step-wise instruction (referring to step-by-step instructions), and misinterpreted it as a _stage-based_ approach, progressively increasing complexity of challenge.  In addition, in this design, this staged approach is enacted through the interaction of participants with increasingly sophisticated documentation and code structures.
+
+The structure of documentation, created in response to participant requests for adding new GDPs to their games, evolved from a piecemeal format in P1 to, by the end of P2, a menu of GDP code snippets accompanied by detailed instructional documentation.
 
 
 <!-- THIS STEPPED PROGRESSION COULD BE EXPRESSED AS A TABLE - OR A GRAPHIC .   -->
 
-![](./Pictures/staged_processes_v1.png){width=95%}
+<!-- ![Figure 5.x - A representation of the staged processes](./Pictures/staged_processes_v1.png){width=95%} -->
 
-Figure 5.x - Staged processes
+| Stage   | Pedagogical focus         | Design focus                                                           |
+|---------|---------------------------|------------------------------------------------------------------------|
+| Stage 1 | Informally identifying GDPs          | Identifying GDPs via an activity playing games [see Appendix D.1.?]                                     |
+| Stage 2 | Quick start cards       | The quick start cards included supported rapid ways to change to GDPs highlighted as affordances in the starting game code template                        |
+| Stage 3 | Adding simple GDPs to the game          | These additions to the game could be made by making minimal changes to template structure needed                           |
+| Stage 4 | Advanced GDPs             | Larger changes including adding new functions to structure of template or making more fundamental underlying changes, or implementing completely unstructured GDPs |
 
-This stepped approach which increases complexity of the objective of activity, is present only in limited  CGD&P research. The work of Repenning on SGD operationalises this concepts through guiding learners to undertake projects which are progressively more complex.
+Table 5.x - A representation of the staged processes - ADD IN MORE DETAIL
 
-This work differs in a core template is provided allowing for less instruction following and the progression does not involve starting from scratch each time. This is notable as I found in P1 that changes to the underlying code structure were stressful and unwelcome for learners one had built familiarity with it [^38].
+This stepped approach which increases complexity of the objective of activity, is present explicitly only in limited CGD&P research. While the work of Repenning on SGD operationalises this staged approach concept through guiding learners to undertake projects which are progressively more complex and take on more complex patterns, it differs in that core template is provided and as such progression to the next stage involves starting from a blank slate each time [@repenning_scalable_2015]. This is notable as I found in P1 that changes to the underlying code structure were stressful and unwelcome for learners one had built familiarity with it [^38].
 
-In line with UMC, an advanced stage of the stage based approach would be the choice to imagine, design and implement a GDP not included in the menu provided, a process that Dan and Toby take on in P3 (see Vignette 7).
+<!-- COULD THE below BE IN THE TABLE ABOVE? -->
 
+This staged based approach, outlined in the table above, shares characteristics and the the benefits  outlined in research on the the broader computing pedagogy of Use Modify Create (UMC) pedagogy [@lytle_use_2019-1] [^38b]. Stages 1 based on the playful game analysis as a precursor to game making [@gamejam]. Stage 2 and the design work on the P2 starting game template facilitated participants in building familiarity with the code structures and use of tools in an accelerated way (as per the Use stage of UMC). . Stage 3 aligns with Modify, with minimal changes causing high resluting impact aligning with UMC the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. The careful scaffolding of initial coding experiences outlined above, forced early, and repeated  transitions from the _use_ to _modify_ stages, addressing the barrier of possible negative affect towards text-based coding. Stage 4 here comprises the most advanced stage of the stage based approach. This could be implementing a more complex GDP from the menu which involves adding new functions, and making more fundamental changes to the code. This decision to _choose_ (and implement) from a restricted set of options, rather than _create_ from scratch, is in line with some adaptations of the UMC model [@lytle_use_2019-1]. A further extension still would be the choice to imagine, design and implement a GDP not included in the menu provided, this is a process that Dan and Toby take on in P3 by adapting the code template to create a Pac-Man like maze game [^pm].
 
+Given the close alignment in the structural model with UMC, the contribution to the research landscape in relation to this aspect of my thesis is in the guiding use of GDPs as a structural support to guide the development between stages. This aspect of the research is developed in Chapter 6. In addition, the research also  form of a case study supporting existing results and providing a replicable pedagogy.
+DEVELOP THIS / LINKS/
 
-### Analysis and discussion in relation to existing research - UMC, half-baked, and constructionist heuristics
+### Analysis and discussion in relation to existing research - half-baked, and constructionist heuristics
 
-Key observations outlined in the table above align with the supported benefits outlined in research on the Use Modify Create (UMC) pedagogy [@lytle_use_2019-1] and the specific technique of starting with a half baked game template [@grizioti_game_2018-1].
+<!-- The use of a broken starting game also aligns with and the more specific technique of starting with a half baked game template [@grizioti_game_2018-1] -->
 
-The alignment of the underlying principles of the learning design with research constructionist design heuristics, in particular half-baked designs process merits deeper exploration. A CONTRIBUTION?
+Similarly, there is a strong alignment of the underlying principles of the learning design described above with research constructionist design heuristics [^39]. This part of the discussion briefly locates the similarities using specific examples and then explores a fundamental difference in approach in regards to key aspects of authenticity in the learning design. Of particular relevance to this design process is the contructionist principle choose black boxes carefully [@resnick_reflections_2005]. Resnick et al.[-@resnick_reflections_2005] describe black boxes as abstractions that remove potentially problematic areas of the production process, creating a protective, scaffolded learning experience while maintaining a boundary with the authentic challenges of coding in the wild [^39a]. Based on Laurillard's [-@laurillard2020significance] interpretation of the constructionist design of microworlds as being driven by affordances that structure user experimentation to enable exploration and concept formation without reliance on direct instruction, I propose this design as a form of microworld [^39b].
 
+It is, however, an adapted Microworld: in a similar way to how the work of Kynigos et al. extends the Microworld construct through the incompleteness of the design as a half-baked, my design is also distinguishable in that it offers greater authenticity and connection to professional environments and documentation. When compared to a constructionist microworld, like the Mathworld of LOGO and drawing turtles, the structure of my learning design is characterised by its relatively porous borders between this controlled environment and other, more authentic coding ecosystems.
 
-
-The careful design work on the P2 starting game template facilitated participants in building familiarity with the code structures and use of tools in an accelerated way. In addition, the framework of UMC highlights the benefits of a stage-based design. In this design, this staged approach is enacted through the interaction of participants with code via increasingly sophisticated documentation. My observations, supported in the following chapter, indicate that the combination of the use of a template and a collection of GDPs accelerates the use of certain coding fluency practices, which, in turn, had a subsequent impact on the increased use of social coding processes.
-
-Turning to  design heuristics proposed by constructionist research for creative computing environments [^39], of particular relevance to this design process is the principle choose black boxes carefully [@resnick_reflections_2005]. Resnick et al.[-@resnick_reflections_2005] describe black boxes as abstractions that remove potentially problematic areas of the production process, creating a protective, scaffolded learning experience while maintaining a boundary with the authentic challenges of coding in the wild.
-
-Black box decisions steer learners toward exploring preferred concepts. Papert's [-@papert_mindstorms_1980] work on Turtle control in LOGO exemplifies this approach, using abstraction to focus on powerful mathematical ideas.
-
-Techniques or concepts present in constructionist design research, embodied in this intervention's toolset, include a simplified code authoring environment with live feedback in a preview window, techniques to avoid and correct syntax errors via the linting capabilities of the code playground (see glossary), and the use of a GDP menu to encourage creative but scaffolded design. A detailed description of these elements is explored in Appendix.tech.
-
-The use of black boxes is also widespread in professional coding practices, particularly through code libraries and frameworks. These tools provide pre-written, self-contained sections of code to simplify complex operations. In my design, the Phaser game-making code library framework serves this purpose by managing underlying structures for gravity and physics calculations necessary for object collisions. In addition, my starting game template further simplified these processes by allowing participants to modify gravity settings through a single variable, thus combining professional coding language use with an accessible learning experience. Based on Laurillard's [-@laurillard2020significance] interpretation of the constructionist design of microworlds as being driven by affordances that structure user experimentation to enable exploration and concept formation without reliance on direct instruction, I propose this design as a form of microworld.
-
-In my design greater authenticity and connection to professional environments and documentation distinguishes it from foundational Microworld design ethos. When compared to many other text coding pedagogies this learning design can be seen as highly scaffolded [EXPLAIN?]. However, when compared to a constructionist microworld, the structure of my learning design is compromised by its relatively porous borders between this controlled environment and other, more authentic coding ecosystems.
-
-I argue that increased scaffolding of learner resources and tools can enhance instrumental agency [IN HERE OR NOT - PERHAPS SIGNPOST AT END OF HARBOUR METAPHOR] for novice coders but potentially at the cost of limiting access to the tools and processes of authentic creative communities. The relationship between authentic and scaffolded processes can be understood as an inherent dialectical tension that learning designers should account for rather than attempt to eliminate.
+<!-- When compared to many other text coding pedagogies this learning design can be seen as highly scaffolded [EXPLAIN?]. However,  -->
 
 
+
+I argue that increased scaffolding of learner resources and tools can enhance instrumental agency [IN HERE OR NOT - PERHAPS SIGNPOST AT END OF HARBOUR METAPHOR] for novice coders but potentially at the cost of limiting access to the tools and processes of authentic creative communities.
+
+
+A possible drawback of using a professional tool for novice learners is the risk of culture shock when participants encounter the unfamiliar and potentially alienating aspects of a professional coding ecosystem. The learning design outlined in this chapter helps address at least the beginning of this process by providing a protective, scaffolded learning environment.
+
+The relationship between authentic and scaffolded processes can be understood as an inherent dialectical tension that learning designers should account for rather than attempt to eliminate.
+
+
+
+
+
+
+
+<!-- The use of black boxes is also widespread in professional coding practices, particularly through code libraries and frameworks. These tools provide pre-written, self-contained sections of code to simplify complex operations.  -->
+
+
+<!-- Techniques or concepts present in constructionist design research, embodied in this intervention's toolset, include a simplified code authoring environment with live feedback in a preview window, techniques to avoid and correct syntax errors via the linting capabilities of the code playground (see glossary), and the use of a GDP menu to encourage creative but scaffolded design. A detailed description of these elements is explored in Appendix.tech. -->
 
 #### Harbour metaphor
 
@@ -585,6 +595,12 @@ Harbour walls prevent large waves from entering but also provide gaps allowing m
 
 **Summary of chapter CHAT and DBR concepts and a table of tensions**
 
+This chapter has explored the complexity of the interacting tools and documentation in relation to their evolution in different phases of the formative intervention process.
+
+The contradictions explored initially focused on technical and then more social dimensions of the learning design.
+
+The process which surfaced some of the barriers to achieving the varied competencies needed to complete the text coding of a game project.
+
 This chapter has described three contradictions that occurred during an iterative, phase-based approach using a methodology guided by techniques of DBR and CHAT.
 
 IT'S BEEN SO EXTENSIVE WE COULD REFER TO IT AS A DESIGN VOYAGE!
@@ -602,6 +618,8 @@ The use of a design narrative processes informed by  DBR practice [@hoadley_crea
 - Manual: http://3m.flossmanuals.net
 - Manual Splash page: https://jamm-labs.github.io/ggcp/manual
 
+
+My observations, supported in the following chapter, indicate that the combination of the use of a template and a collection of GDPs accelerates the use of certain coding fluency practices, which, in turn, had a subsequent impact on the increased use of social coding processes.
 
 IS THIS PART ON AGENCY REALLY NEEDED
 At this point it is useful to describe a process here briefly  in relation to the three contradictions explored above [^45]. The evolution of these tools and documentation outlined in C1 and C2  was driven by a need to increase in instrumental agency due to the novice status of participants. As instrumental proficiency increased for some participants it allowed the development of peer learning and other social coding processes to emerge as described in C3.  
@@ -740,10 +758,20 @@ Gilbert is the worsted name.
 
 [^37b]: While this process is outlined in Appendix 5.4?, it is not included in the narrative here as while useful for reflection, it lacked full implementation.
 
+
+
 [^38]: The process of having to change the underlying structure of the template in P1 was something that one group found particularly jarring. An experience outlined in interview data (Maggie 1) and in Appendix.tech
 
+[^38b]: These include, greater syntax support, etc. FINISH
+For a recap of benefits see Chapter 2.
+
+[^pm]: Pac-Man is a maze game where the decision to break out of the paragdim of the platformer game showed significant participant agency and is detailed in  Vignette 6.
 
 [^39]: These design heuristics present in decisions made in creating microworld environments, the development of Scratch software, and constructionist gaming research include: principles of low floors, wide walls, high ceilings, open windows and choosing black boxes carefully (see Chapter 2 for a summary).
+
+[^39a]: Black box decisions steer learners toward exploring preferred concepts. Papert's [-@papert_mindstorms_1980] work on Turtle control in LOGO exemplifies this approach, using abstraction to focus on powerful mathematical ideas.
+
+[^39b]: In my design, the Phaser game-making code library framework serves this purpose by managing underlying structures for gravity and physics calculations necessary for object collisions. In addition, my starting game template further simplified these processes by allowing participants to modify gravity settings through a single variable, thus combining professional coding language use with an accessible learning experience.
 
 [^40]:Harbours provide opportunities for loading, refuelling, or maintaining sea vessels. In addition, harbour transport infrastructures may be present to provide connections to inland rail or road links. Various structures exist, such as gang planks, gantries, and cranes to assist the importing of goods, vehicles, and people onto the ships.
 
