--- a/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
+++ b/_posts/thesis_chapters/2025-6-6-Gdps_v1.md
@@ -774,34 +774,29 @@ Other characteristics and norms of the emerging idioculture stemming which stem 
 
 ## Discussion
 
-This discussion section discusses the complexity of the expanded object of activity and the diverse mediational uses of GDPs using a activity theory as a framework. It summarises the different uses of GDPs in a table and notes the limitations of 3GAT to represent such diversity of mediational strategies.  
+This discussion section discusses the complexity of the expanded object of activity and the diverse mediational uses of GDPs using a activity theory as a framework. It summarises the different uses of GDPs and notes the limitations of 3GAT to represent such diversity of mediational strategies.  
 
-This discussion begins to address the challenge of communicating the diverse mediational strategies beyond the list in the table, suggesting SDBE's concept of repertoires (and signposting a more accessible and practical conceptual model).
+This discussion begins to address the challenge of communicating the diverse mediational strategies , suggesting SDBE's concept of repertoires (and signposting a more accessible and practical conceptual model).
 
 I then turn to the motivations and a synthesis  of an expanded concept of the object of activity involved. My attention returns to concepts of flow and computational fluency present in CGD&P research, suggesting an extension to include developing concepts of agency in the process.
 
-AND THEN SIGNPOSTS Ch.7 also
+
 
 ### Addressing the use of GDPs in relation to understanding representing the processes of mediation process
 
 Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed.
 
-This chapter has developed analysis of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter. GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources.
-
-A fuller table summarising this chapter's interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts and linking to supporting evidence is included in the Appendix WHICH ONE.
-
-The table lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis.
-
+This chapter has developed analysis of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter. GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources. GDPS, are used not just mediation as a tool, but also as a concept, so much so that it merits it's own activity system.
 REVISIT AND CLARIFY.
-GDPS, are used not just mediation as a tool, but also as a concept, so much so that it merits it's own activity system.
 
-Given that both the wider object of activity represented at the community game making process and the narrower object of each game instance, can be interpreted as a shared object for expanded, interacting processes of activity.
-AND THAT THEY ARE COMPLEX OBJECTS. Attempts to represent the variety of uses of GDPs within the technique of triangular visual representations would be problematic.
+A fuller table summarising this chapter's interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts and linking to supporting evidence is included in the Appendix WHICH ONE. The table lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis.
 
-In particular, the complexity in terms of the role of GDPs here which act sometimes as mediational strategies and at other times as motivational components of the object at hand would be difficult to communicate. Similarly, representation of the interplay of mediational strategies of tool use with the community level of activity and activity wider systems would also be challenging and unwieldy. As Engeström and Saninno [@engestrom_mediated_2021] note in discussing challenges of representing new generations of AT, you can't keep adding triangles.
 
-SO WHAT?
-SIGNPOSTING TO CHAPTER 7 REPRESENTATION?
+
+ <!-- object of each game instance, can be interpreted as a shared object for expanded, interacting processes of activity. -->
+
+Given the complex and shared nature of both the objects of activity represented at the community game making process and the narrower scopes, attempts to represent the variety of uses of GDPs within the technique of triangular visual representations would be problematic. As Engeström and Saninno [@engestrom_mediated_2021] note in discussing challenges of representing new generations of AT, you can't keep adding triangles. In particular, the complexity in terms of the role of GDPs here which act sometimes as mediational strategies and at other times as motivational components of the object at hand would be difficult to communicate. Similarly, representation of the interplay of mediational strategies of tool use with the community level of activity and activity wider systems would also be challenging and unwieldy. As such, Chapter 7 explores novel ways to represent both the learner experience in this design and an overall conception of agency development.
+
 LINK TO EXPLORATION OF COMPLEX OBJECT BELOW?
 
 
